--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 /* Общие стили для проекта */
 body {
-  background-color: bisque;
+  background-color: rgb(130, 78, 199);
+  /* rgb(40 15 72); */
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
